@@ -1,0 +1,12 @@
+{
+  "type": "minecraft:crafting_shapeless",
+  "ingredients": [
+    {
+      "item": "zollerngalaxy:exoduswoodlog"
+    }
+  ],
+  "result": {
+    "item": "zollerngalaxy:exoduswoodplanks",
+    "count": 4
+  }
+}
