@@ -11,15 +11,18 @@ Zollern Galaxy v2.0.22
 * Lowered default Outpost generation chance to 5%.
 * Added a new Earth-like planet called Exodus.
     - This Planet can be reached via Tier 3 Rocketship.
+    - It will be worked on throughout multiple updates.
 * Added config option to disable validation on chest generation spawns. (ExistingEevee)
 * Updated Chinese translations by EndsM.
 * Updated Exodus ore textures by Skaptic.
 * Updated Exodus Redstone Ore texture.
 * Added the "Lake of Fire" biome to Kriffon.
+* Added the "Zollus Ice Ocean" biome to Zollus.
 * Added the "Rocky Hills" biome to Exodus.
 * Added the "Exo Ocean" biome to Exodus.
 * Added the "Exo Forest" biome to Exodus.
 * Added "Galaxy Aster" flowers to Exodus.
 * 
 * Updated Blackrock and Whiterock textures for Purgot.
+* Updated Chinese translations by EndsM.
 * 
